@@ -18,6 +18,10 @@
 |===
 | | Description | PR
 
+| 🐛
+| Fix Panic for `kn trigger describe` with Sink URI
+| https://github.com/knative/client/pull/900[#900]
+
 | 🎁
 | Group commands in usage output with `kn --help`
 | https://github.com/knative/client/pull/887[#887]
